Updated styling: added navigation bar at the top instead of buttons in de body, also fixed the image overlapping with the nav bar. I also updated the planner.php.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html {
     height: 1000px;
 }
+
 .title {
     width: 100%;
     height: 100%;
@@ -10,26 +11,6 @@ html {
     text-transform: uppercase;
     text-align: center;
     position: center;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    color: rgb(33, 33, 33);
-    font-family: sans-serif;
-    overflow: hidden;
-   /*background-color: rgb(239, 243, 233);*/
-    background-image: linear-gradient(33deg, rgba(52, 98, 108, 255), rgba(52, 98, 108, 0)),linear-gradient(-33deg, rgb(146, 129, 122), rgba(146, 129, 122, 0));
-    background-repeat: no-repeat;
-}
-right {
-    height: 100%;
-    width: 50%;
-    position: absolute;
-    right: 0px;
-    top: 0;
-    padding-top: 20px;
-    z-index: 1;
 }
 
 header {
@@ -46,17 +27,37 @@ header {
     background-position: center;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    color: rgb(33, 33, 33);
+    font-family: sans-serif;
+    overflow: hidden;
+    background-image: linear-gradient(33deg, rgba(52, 98, 108, 255), rgba(52, 98, 108, 0)), linear-gradient(-33deg, rgb(146, 129, 122), rgba(146, 129, 122, 0));
+    background-repeat: no-repeat;
+}
+
+right {
+    /*background-color: red;*/
+    height: 100%;
+    width: 50%;
+    position: fixed;
+    top: 18vh;
+    padding-top: 20px;
+    z-index: 2;
+    right: 0;
+}
+
 main {
     height: 100%;
     width: 50%;
-    position: center;
-    top: 0;
+    position: absolute;
+    top: 18vh;
     padding-top: 20px;
     z-index: 1;
 }
 
 main section {
-    position: center;
     width: 100%;
     height: 100%;
     margin: 20px;
@@ -64,20 +65,16 @@ main section {
     background-color: rgb(207, 211, 206);
     border-radius: 10px;
     box-shadow: 5px 5px 10px black;
-    z-index:0;
+    overflow: scroll;
 }
 
 main section div {
-    margin-top: 10px;
-    width: 100%;
-    height: 100%;
-
+padding: 8px;
 }
 
 label {
     width: 100px;
     display: inline-block;
-    border-bottom-color: green;
 }
 
 input {
@@ -86,11 +83,10 @@ input {
     padding: 6px;
     border: none;
     border-radius: 50px;
-
-
+    border-bottom-color: green;
 }
 
-input:hover{
+input:hover {
 
 }
 
@@ -102,8 +98,17 @@ button {
     background-color: #333439;
     color: white;
     border-radius: 10px;
-
 }
+
+.navButton {
+    justify-content: space-around;
+    width: 100%;
+    text-align: center;
+    padding: 0px;
+    background-color: unset;
+    font-size: 2vw;
+}
+
 
 h1 {
     margin: 0;
@@ -125,16 +130,16 @@ nav {
     width: 100vw;
     height: 18vh;
     justify-content: flex-start;
-    background-color: #ad8836;
+    background-color: #34626c;
     border-radius: 50px;
 }
 
 nav div {
     padding: 10px;
-    width:10vw;
+    width: 10vw;
     text-align: center;
     color: black;
-    background-color: #fbc34e;
+    background-color: #92817a;
     cursor: pointer;
     transition: all 0.4s ease-out;
     border-radius: 50px;
@@ -142,7 +147,7 @@ nav div {
 
 
 nav div:hover {
-    background-color: white;
+    background-color: black;
     color: #333439;
 }
 
@@ -182,6 +187,7 @@ footer {
     nav {
         display: block;
     }
+
     label {
         width: 200px;
         display: block;
